[stack] fix when site-description too long

--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -143,6 +143,7 @@
         color: var(--body-text-color);
         font-weight: normal;
         margin: 0 auto;
+        text-align: center;
         font-size: 1.4rem;
 
         @include respond(2xl) {
